# fastAPI-2.0

./: main.py  pyproject.toml  test.db
app/: app.py  db.py  schema.py  users.py
